--- a/Views/IGV/Index.cshtml
+++ b/Views/IGV/Index.cshtml
@@ -15,7 +15,7 @@
    <form asp-controller="IGV" asp-action="Calcular">
     <input asp-for="Operador1" class="form-control" />
    </form> 
-   Peso
+   Kilogramos
     <form asp-controller="IGV" asp-action="Calcular">
     <input asp-for="Operador2" class="form-control" />
    </form> 
